<resources>
    <string name="app_name">Infinity</string>
    <string name="title_activity_english">Log In</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing number
        completions."
    </string>
    <string name="title_activity_latvian">Log In</string>
    <string name="title_activity_russian">Log In</string>
    <string name="title_activity_stats_en">Stats_en</string>
    <string name="eng">ENGLISH</string>
    <string name="lat">LATVIAN</string>
    <string name="rus">русский</string>
    <string name="logo">Logo</string>
    <string name="infinity">I N F I N I T Y</string>
    <string name="quote">Life Beyond Limits</string>
    <string name="title_stat">Statistics</string>
    <string name="title_Offers">Offers</string>
    <string name="title_shop">E-Shop</string>
    <string name="title_call">Call</string>
    <string name="title_profile">Profile</string>
    <string name="mobileno">Mobile Number</string>
    <string name="login">LOG IN</string>
    <string name="singin">SIGN IN</string>
    <string name="pass">Password</string>
    <string name="forpass">Forget Password?</string>
    <string name="accountb">Account Balance</string>
    <string name="search_hint">Search In Recent Transactions</string>
    <string name="amount">€14.99</string>
    <string name="recenttrans">Recent Transactions</string>
    <string name="offers">Partners &amp; Offers</string>
    <string name="title_activity_shop__category">Shop_Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="client1">Business &amp; State Clients</string>
    <string name="client2">New Clients</string>
    <string name="client3">Clients From Abroad</string>
</resources>
