<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Statistics"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:tint="@color/colorAccent"
        android:title="@string/title_stat" />

    <item
        android:id="@+id/navigation_Offers"
        android:icon="@drawable/ic_card_giftcard_black_24dp"
        android:tint="@color/colorAccent"
        android:title="@string/title_Offers" />

    <item
        android:id="@+id/navigation_Shop"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:tint="@color/colorAccent"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_Call"
        android:icon="@drawable/ic_call_black_24dp"
        android:tint="@color/colorAccent"
        android:title="@string/title_call" />

    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:tint="@color/colorAccent"
        android:title="@string/title_profile" />

</menu>
