<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHome">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="382dp"
        android:layout_height="191dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="212dp"
        android:paddingLeft="98dp"
        android:paddingTop="15dp"
        android:paddingRight="98dp"
        android:text="@string/infinity"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="383dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="272dp"
        android:paddingStart="92dp"
        android:paddingLeft="92dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/quote"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="360dp"
        android:layout_marginRight="92dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/buttonshape"
        android:text="@string/eng"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button2"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:background="@drawable/buttonshape"
        android:text="@string/lat"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button3"
        android:layout_width="203dp"
        android:layout_height="51dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/buttonshape"
        android:text="@string/rus"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button"
        app:layout_constraintVertical_chainStyle="spread" />

</android.support.constraint.ConstraintLayout>