<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="160dp"
    android:paddingRight="20dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/n2"
    tools:context=".EnglishActivity"
    android:windowSoftInputMode="adjustResize">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="382dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:paddingTop="23dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp">

                <AutoCompleteTextView
                    android:id="@+id/num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/mobileno"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:paddingLeft="15dp"
                    android:paddingBottom="20dp"
                    android:textSize="18sp"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="361dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="25dp"
                    android:paddingBottom="20dp"
                    android:singleLine="true"
                    android:textColorHint="#FFFFFF" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerbutton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:text="@string/singin"
                android:textColor="#FFFFFF"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_weight="0.01"
        android:background="@android:color/transparent"
        android:text="@string/forpass"
        android:layout_marginBottom="72dp"/>

</LinearLayout>